# x

./: .gitmodules  data.yaml
.github/: dependabot.yaml
.github/workflows/: monkey.yaml
dotfiles/: .gitconfig  install.sh
dotfiles/HOME/: .gitconfig  .tmux.conf  .vimrc
sandbox/: stdouterr.c
sandbox/python/: find_all_solution.py
sandbox/teio/: README.md  go.mod  iotype_string.go  job.go  scenario.go
sandbox/teio/cmd/teio/: main.go
scripts/: go-install.sh  install-go.sh
syakyo/monkey/: Makefile  README.md  go.mod  main.go
syakyo/monkey/ast/: ast.go  ast_test.go
syakyo/monkey/eval/: builtins.go  eval.go  eval_test.go
syakyo/monkey/lexer/: lexer.go  lexer_test.go
syakyo/monkey/object/: object.go  objecttype_string.go
syakyo/monkey/parser/: parser.go  parser_test.go
syakyo/monkey/repl/: repl.go
syakyo/monkey/token/: token.go
syakyo/mrbgpdv2/: Cargo.toml  Makefile  README.md
syakyo/mrbgpdv2/src/: bgp_type.rs  config.rs  connection.rs  event.rs  event_queue.rs  header.rs  lib.rs  main.rs  packets.rs  peer.rs  routing.rs
syakyo/mrbgpdv2/src/packets/: header.rs  keepalive.rs  message.rs  open.rs
syakyo/mrbgpdv2/tests/: docker-compose.yaml  run_integration_tests.sh
syakyo/mrbgpdv2/tests/host1/: Dockerfile
syakyo/mrbgpdv2/tests/host2/: Dockerfile
syakyo/proglog/: Dockerfile  Makefile  README.md  go.mod  go.sum
syakyo/proglog/api/v1/: log.pb.go  log.proto  log_grpc.pb.go
syakyo/proglog/charts/proglog/: values.yaml
syakyo/proglog/cmd/getservers/: main.go
syakyo/proglog/test/: ca-csr.json  client-csr.json  server-csr.json
(+29 files in other folders)
