[package]
name = "mrbgpdv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3.11"
ipnetwork = "0.18.0"
rtnetlink = "0.9.0"
thiserror = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
